# portf-lioGrupo1

./: .gitignore  README.md  dev.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml
api/: application.py  home.py
backend/app/: crud.py  database.py  dev.sh  main.py
backend/app/routers/: comments.py  games.py
frontend/: index.html
frontend/src/: App.css  App.jsx  App.tsx  habilidade.css  habilidade.jsx  index.css
frontend/src/components/: Comment.jsx  Comments.jsx  (+4 more)
portfolioGrupo1/: index.html  package-lock.json  package.json  pyproject.toml
portfolioGrupo1/backend/app/: database.py  main.py  models.py  schemas.py
portfolioGrupo1/backend/app/routers/: comments.py
portfolioGrupo1/postgres_data/base/13528/: 2619
portfolioGrupo1/postgres_data/base/16384/: 1259  16414  2224  2579  2604  2606  2620  2657  2658  2659  2662  2663  2664  2674  2699  2701  2704  3455  5002  pg_internal.init
portfolioGrupo1/postgres_data/global/: 2672  2676
portfolioGrupo1/postgres_data/pg_stat_tmp/: db_0.stat  db_16384.stat
portfolioGrupo1/src/: App.tsx
portfolioGrupo1/src/components/: Habilidade.tsx  HeroSection.tsx  Home.tsx  Navbar.tsx  NotFound.tsx  habilidade.css
portfolioGrupo1/src/pages/: Home.tsx  Layout.tsx  PingPong.tsx  SnakeGame.tsx  TicTacToe.tsx
postgres_data/: postmaster.pid
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres_data/pg_stat_tmp/: global.stat
scripts/: seed.py
src/: index.css
src/components/: Navbar.tsx  ThemeToggle.tsx
src/pages/: Home.tsx  Layout.tsx  NotFound.tsx  SnakeGame.tsx
(+23 files in other folders)
