[tool.poetry]
name = "portf-liogrupo1"
version = "0.1.0"
description = ""
authors = ["FaraoBack <cairebelok3@gmail.com>"] # <--- Formato corrigido
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"